--- a/package.json
+++ b/package.json
@@ -17,7 +17,21 @@
   },
   "homepage": "https://github.com/akng8/express_react_starter#readme",
   "dependencies": {
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
     "express": "^4.14.0",
-    "helmet": "^2.1.2"
+    "gulp": "^3.9.1",
+    "gulp-live-server": "0.0.30",
+    "gulp-sass": "^2.3.2",
+    "helmet": "^2.1.2",
+    "minifyify": "^7.3.3",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
