--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
+    "react-router": "^2.7.0",
     "redux": "^3.5.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
